Fix codeline overflow to scroll the whole snippet

--- a/src/home_page/result_viewer/code_fragment/CodeFragment.module.css
+++ b/src/home_page/result_viewer/code_fragment/CodeFragment.module.css
@@ -17,6 +17,7 @@
   outline: black solid 1px;
   border: gray solid 1px;
   border-left: gray solid 15px;
+  overflow-x: auto;
 }
 
 .footerDiv {
